--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSl=false
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSl=false, jdbc:mysql://localhost:3306/employee_shift_system?useSSl=false
 spring.datasource.username=root
 spring.datasource.password=password
 
